--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     // Provides ArFragment, and other UX resources.
-
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
+    implementation "com.gorisse.thomas.sceneform:sceneform:1.21.0"
 
     // Provides ARCore Session and related resources.
     implementation 'com.google.ar:core:1.31.0'
@@ -45,7 +44,7 @@ dependencies {
 
 
     // Alternatively, use ArSceneView without the UX dependency.
-    implementation 'com.google.ar.sceneform:core:1.17.1'
+
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
